# CSCI3081

./: cswriting.txt
_templates/: templates  templates.cc
class-repo-public/: .gitignore  README.md
class-repo-public/Assignments/: CSwriting.md
class-repo-public/Exercises/: TestSensor.cc  collision.py  it2_design.docx  nano_cpplint.md  op_over.cc  proximity.py  sensor_distress_unittest.cc  uml.md
class-repo-public/Exercises/CartDesign/: cart  cart.cpp  cart.h  main.cpp  makefile  readme.md
class-repo-public/Exercises/Inheritance/: object.cpp  readme.md
class-repo-public/Exercises/_templates/: templates.cc
class-repo-public/Exercises/classDefRobots/: .gitignore  classDefExercise.md  main.cpp  makefile  robot.cpp  robot.h
class-repo-public/project/: Iteration1Requirements.md  Iteration2Requirements.md  RegradeRequest.md
constants/: chain_reference  chain_reference.cpp  constants  constants.cc
duckVisitor/: .gitignore  Duck.cpp  Duck.h  Fly.h  Quack.cpp  Quack.h  Visitor.cpp  Visitor.h  duckVisitor.cpp  readme.md
ducks/: .duckStrategyPoly.cpp.swp  duck2.h  duckStrategy.cpp  duckStrategyPoly.cpp  ducks
libSimpleGraphics/: CMakeLists.txt  README.md
libSimpleGraphics/include/simple_graphics/: circle_viewer.h  graphics_app.h
libSimpleGraphics/src/: circle_viewer.cc  graphics_app.cc  main-blankwindow.cc  main-circleviewer.cc
repo-zhan4854/: .gitignore  IterPre_01_Feedback.md  Lab_01_Assessment.md  Lab_02_Assessment.md  Lab_02_Feedback.md  Lab_03_Assessment.md  Lab_03_Feedback.md  README.md  iteration1-feedback.md
repo-zhan4854/project/: Iteration1Requirements.md
testing/: Makefile  README.md  fibonacci.h  fibonacci_test.cc  main.cc  robot.cc  robot.h  robot_test.cc  tests.cc
(+286 files in other folders)
